# hdt-cpp

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  configure.ac
libhdt/: Makefile.am
libhdt/include/: HDTManager.hpp  RDFParser.hpp
libhdt/src/bitsequence/: BitSequence375.cpp
libhdt/src/hdt/: BasicHDT.cpp  BasicHDT.hpp  ControlInformation.cpp  HDTManager.cpp  HDTSpecification.cpp
libhdt/src/rdf/: RDFParser.cpp  RDFParserSerd.cpp  RDFParserSerd.hpp
libhdt/src/sequence/: AdjacencyList.cpp  LogSequence.cpp  LogSequence2.hpp
libhdt/src/triples/: BitmapTriplesIterators.cpp
libhdt/src/util/: fileUtil.cpp  fileUtil.hpp  filemap.cpp
libhdt/tests/: Makefile.am
libhdt/third/: memstream.hpp
libhdt/tools/: Makefile.am  hdt2rdf.cpp  hdtSearch.cpp  modifyHeader.cpp  rdf2hdt.cpp  replaceHeader.cpp
